feat: adding swagger for CreateUser endpoint
